# jsk_recognition

./: .gitattributes  .gitignore  .gitmodules  .rosinstall  .travis.rosinstall  .travis.rosinstall.hydro  .travis.rosinstall.indigo  .travis.rosinstall.jade  .travis.rosinstall.kinetic  .travis.rosinstall.noetic  .travis.yml  .travis_before_script_opencv3.bash  .travis_before_script_opencv_apps.bash  .travis_before_script_pcl1.8.bash  .travis_before_script_released_testing.bash  CMakeLists.txt  Makefile  README.md  generate_readme.py  install_latest_openni2.sh  install_latest_pcl.sh  lint.bash  manifest.xml
.travis/: .travis.yml  CHANGELOG.rst  CMakeLists.txt  package.xml  rosdep-install.sh  travis.sh  travis_jenkins.py
audio_to_spectrogram/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
audio_to_spectrogram/cfg/: AudioAmplitudePlot.cfg  DataAmplitudePlot.cfg
audio_to_spectrogram/launch/: audio_to_spectrogram.launch  audio_to_spectrum.launch  data_to_spectrum.launch  spectrum_plot.launch  spectrum_to_spectrogram.launch  wrench_to_spectrogram.launch
audio_to_spectrogram/sample/: sample_audio_to_spectrogram.launch  sample_wrench_to_spectrogram.launch
audio_to_spectrogram/scripts/: audio_amplitude_plot.py  audio_to_spectrum.py  audio_to_spectrum_backup.py  data_amplitude_plot.py  data_to_spectrum.py  spectrum_filter.py  spectrum_plot.py  spectrum_to_spectrogram.py
audio_to_spectrogram/test/: audio_to_spectrogram.test  wrench_to_spectrogram.test
checkerboard_detector/: CHANGELOG.rst  CMakeLists.txt  LICENSE  capture.launch  capture_data.launch  catkin.cmake  checkerboard_detector.launch  checkerboard_detector_single.launch  doc  mainpage.dox  manifest.xml  objectdetection_tf_publisher.launch  package.xml
checkerboard_detector/cfg/: CheckerboardDetector.cfg
checkerboard_detector/launch/: murooka_board.launch
checkerboard_detector/sample/: sample_checkerboard_calibration.launch  sample_checkerboard_detector.launch  sample_objectdetection_tf_publisher.launch  sample_objectdetection_transform_echo.launch
checkerboard_detector/scripts/: capture_data_with_multi_checkerboard.py
checkerboard_detector/src/: CMakeLists.txt  checkerboard_calibration.cpp  checkerboard_detector.cpp  math.h  objectdetection_tf_publisher.py  objectdetection_transform_echo.cpp
checkerboard_detector/test/: checkerboard_detector.test  objectdetection_tf_publisher.test  objectdetection_transform_echo.test
depth_image_publisher/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml
depth_image_publisher/cfg/: DepthImagePublisher.cfg
depth_image_publisher/test/: depth_image_publisher.test
gpt4v_vqa/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
gpt4v_vqa/cfg/: GPT4V.cfg
gpt4v_vqa/euslisp/: run_simple_vqa.l  utils.l
gpt4v_vqa/launch/: vqa.launch
gpt4v_vqa/node_scripts/: gpt4v_vqa_node.py  vqa_interpreter.py
image_restoration/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
image_restoration/launch/: sample_image_restoration.launch  sample_image_restoration_compressed.launch
image_restoration/scripts/: image_restoration.py  install_sample_data.py
image_restoration/test/: image_restoration.test
imagesift/: CHANGELOG.rst  CMakeLists.txt  LICENSE  catkin.cmake  doc  image_cv_feature.cpp  imagefeatures.cpp.in  imagesift.cpp  imagestar.cpp  imagesurf.cpp  manifest.xml  nodelet.xml  package.xml  setup.py
imagesift/sample/: imagesift_sample.launch  sift_keypoints.py
imagesift/src/: imagefeatures.cpp.in  imagesift.cpp
imagesift/test/: test_imagesift.test  test_two_imagesift.test
jsk_libfreenect2/: CHANGELOG.rst  CMakeLists.txt  LICENSE  Makefile.libfreenect2  README.md  catkin.cmake  nodelet.xml  package.xml
jsk_libfreenect2/config/: libfreenect2.rviz
jsk_libfreenect2/launch/: calib.launch  demo.launch  libfreenect2.launch
jsk_libfreenect2/src/: driver_nodelet.cpp
jsk_pcl_ros/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  catkin.cmake  conf.py  doc  index.rst  jsk_pcl_nodelets.xml  mainpage.dox  manifest.xml  package.xml  rosdep.yaml  rosdoc.yaml
jsk_pcl_ros/bench/: bench_ransac_plane_estimation.cpp  bench_ransac_plane_estimation.sh  output.csv  plot_bench_ransac_plane_estimation.py
jsk_pcl_ros/cfg/: #HSIColorFilter.cfg#  BilateralFilter.cfg  BilateralFilter.cfgc  BorderEstimator.cfg  BoundingBoxFilter.cfg  BoundingBoxFilter.cfgc  ClusterPointIndicesDecomposer.cfg  ColorBasedRegionGrowingSegmentation.cfg  ColorFilter.cfg  ColorHistogram.cfg  ColorHistogramClassifier.cfg  ColorHistogramFilter.cfg  ColorHistogramMatcher.cfg  ColorHistogramMatcher.cfgc  ColorHistogramVisualizer.cfg  ColorizeDistanceFromPlane.cfg  ColorizeDistanceFromPlane.cfgc  DepthFilter.cfg  EdgeDepthRefinement.cfg  EdgeDepthRefinement.cfgc  EdgebasedCubeFinder.cfg  EdgebasedCubeFinder.cfgc  EnvironmentPlaneModeling.cfg  EnvironmentPlaneModeling.cfgc  EuclideanClustering.cfg  EuclideanClustering.cfgc  ExtractParticlesTopNBase.cfg  ExtractTopPolygonLikelihood.cfg  FeatureRegistration.cfg  FisheyeSphere.cfg  GeometricConsistencyGrouping.cfg  GridSampler.cfg  GridSampler.cfgc  HSIColorFilter.cfg  HSIColorFilter.cfgc  HSVColorFilter.cfg  HSVColorFilter.cfgc  (+80 more)
jsk_pcl_ros_utils/: CHANGELOG.rst  CMakeLists.txt  LICENSE  doc  jsk_pcl_nodelets.xml  package.xml
jsk_perception/: .gitignore  CHANGELOG.rst  CMakeLists.txt  Makefile.slic  README.md  catkin.cmake  conf.py  doc  fisheye_gimbal_nodelets.xml  jsk_perception_nodelets.xml  mainpage.dox  manifest.xml  package.xml  requirements.in  requirements.txt  requirements.txt.indigo  rosdep.yaml  rosdoc.yaml  setup.py
jsk_perception_3rdparty/: CMakeLists.txt  README.md  doc  package.xml  requirements.in
jsk_recognition/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
jsk_recognition_msgs/: CHANGELOG.rst  CMakeLists.txt  doc  package.xml  setup.py
jsk_recognition_utils/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
jsk_vil_msgs/: CMakeLists.txt  package.xml
jsk_vil_ros/: CMakeLists.txt  package.xml
(+3120 files in other folders)
