<package>
  <name>jsk_travis</name>
  <version>0.0.5</version>
  <description>jsk_travis scripts</description>
  <license>BSD</license>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python</build_depend>
  <build_depend>catkin</build_depend>
  <build_depend>rostest</build_depend>
  <test_depend>rospy_tutorials</test_depend>

  <export/>
</package>
