<package>
  <name>audio_to_spectrogram</name>
  <version>0.0.1</version>
  <description>Convert audio (audio_common_msgs/AudioData) to spectrogram (sensor_msgs/Image) </description>

  <maintainer email="yamaguchi@jsk.imi.i.u-tokyo.ac.jp">Naoya Yamaguchi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>audio_capture</run_depend>
  <run_depend>audio_common_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>python-matplotlib</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

</package>
