<package format="3">
  <name>audio_to_spectrogram</name>
  <version>1.2.15</version>
  <description>Convert audio (audio_common_msgs/AudioData) to spectrogram (sensor_msgs/Image) </description>

  <maintainer email="yamaguchi@jsk.imi.i.u-tokyo.ac.jp">Naoya Yamaguchi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>audio_capture</exec_depend>
  <exec_depend>audio_common_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-matplotlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-matplotlib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

</package>
