<package>
  <name>checkerboard_detector</name>
  <version>0.1.18</version>
  <description>Uses opencv to find checkboards and compute their 6D poses with respect to the image. Requires the image to be calibrated.
    Parameters:
    display - show the checkerboard detection
    rect%d_size_x - size of checker in x direction
    rect%d_size_y - size of checker in y direction
    grid%d_size_x - number of checkers in x direction
    grid%d_size_y - number of checkers in y direction
    
    There can be more than one grid%d declared, the numbers should grow consecutively starting at 0.</description>

  <license>BSD</license>

  <author>Rosen Diankov (rdiankov@cs.cmu.edu)</author>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_tf_publisher</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>posedetection_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_tf_publisher</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>posedetection_msgs</run_depend>

  <build_depend>eigen_conversions</build_depend>
  <run_depend>eigen_conversions</run_depend>
  <build_depend>message_filters</build_depend>
  <run_depend>message_filters</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <build_depend>tf2</build_depend>
  <run_depend>tf2</run_depend>
  <export>

  </export>
</package>
