<package>
  <name>imagesift</name>
  <version>1.2.5</version>
  <description>
    For every image, computes its sift features and send a new message with the image, its intrinsic parameters, and the features.
    Parameters include:
    display - shows the image on the local computer
  </description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <author>Rosen Diankov (rdiankov@cs.cmu.edu), Kei Okada</author>
  <license>LGPL</license>

  <url type="repository">http://github.com/jsk-ros-pkg/jsk_recognition</url>
  <url type="bugtracker">http://github.com/jsk-ros-pkg/jsk_recognition/issues</url>
  <url type="website">http://jsk-docs.readthedocs.io/en/latest/jsk_recognition/doc/imagesift</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>posedetection_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>jsk_recognition_utils</build_depend>
  <build_depend version_gte="2.2.8">jsk_topic_tools</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>libsiftfast</build_depend>
  <build_depend>nodelet</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>posedetection_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>jsk_recognition_utils</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>libsiftfast</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend version_gte="2.2.8">jsk_topic_tools</run_depend>

  <test_depend>rostest</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet.xml"/>
  </export>
</package>
